WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11334
Writely Editor: Placing caret in a list "highlights" both Numbered List and Bulleted List toolbar icons
https://bugs.webkit.org/show_bug.cgi?id=11334
Summary
Writely Editor: Placing caret in a list "highlights" both Numbered List and B...
Chris Petersen
Reported
2006-10-17 15:44:40 PDT
* SUMMARY When I place the caret in a list, both the Numbered List and Bulleted List icons become highlighted. This is the wrong behavior. I should only see the correct list icon become highlighted in the toolbar. * STEPS TO REPRODUCE 1. With
r17089
, login to your writely (Google Docs and Spreadsheets) site 2. Click create a new document 3. Type a word in the document body and click on either Numbered List and Bulleted List icon 4. After the list styling is applied to the text, notice that both list icons are selected. * RESULTS When the caret is placed in a list, only the assigned list style toolbar button should be highlighted. This works fine in FF 1.5.0.7.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Petersen
Comment 1
2006-10-17 15:45:51 PDT
This is filed as <
rdar://problem/4787908
>
Justin Garcia
Comment 2
2006-10-23 19:43:09 PDT
r17234
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug