LayoutTests:

Reviewed by mjs

        <http://bugs.webkit.org/show_bug.cgi?id=11334>
        Writely Editor: Placing caret in a list "highlights" both Numbered List and Bulleted List toolbar icons

        * editing/execCommand/queryCommandState-01-expected.txt: Added.
        * editing/execCommand/queryCommandState-01.html: Added.

WebCore:

        Reviewed by mjs

        <http://bugs.webkit.org/show_bug.cgi?id=11334>
        Writely Editor: Placing caret in a list "highlights" both Numbered List and Bulleted List toolbar icons

        * WebCore.xcodeproj/project.pbxproj:
        * editing/Editor.cpp:
        (WebCore::Editor::selectionUnorderedListState): Added.
        (WebCore::Editor::selectionOrderedListState): Added.
        * editing/Editor.h:
        * editing/JSEditor.cpp:
        * page/Frame.cpp:
        * page/Frame.h:



Canonical link: https://commits.webkit.org/14501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17234 268f45cc-cd09-0410-ab3c-d52691b4dbfc